--- a/code/prog2/CMakeLists.txt
+++ b/code/prog2/CMakeLists.txt
@@ -53,4 +53,4 @@ else()
     target_link_libraries(PCO_LAB04_prog2 PRIVATE Qt6::Core Qt6::Gui Qt6::Widgets Qt6::PrintSupport Qt6::Core5Compat qtrainsim -lpcosynchro)
 endif()
 
-file(COPY ../../QtrainSim/data DESTINATION ${CMAKE_BINARY_DIR}/code_student/prog2)
+file(COPY ../../QtrainSim/data DESTINATION ${CMAKE_BINARY_DIR}/code/prog2)
